Comment update 	modified:   yaml_files/CosmoBit_tutorial.yaml

--- a/yaml_files/CosmoBit_tutorial.yaml
+++ b/yaml_files/CosmoBit_tutorial.yaml
@@ -18,7 +18,7 @@
 #
 #         Note:
 #         -----
-#           *) for this specific yaml file you only need CosmoBit, DarkBit, NeutrinoBit and Precision
+#           *) for this specific yaml file you only need CosmoBit, DarkBit, NeutrinoBit and PrecisionBit
 #                 => there is no need to build all Bits of GAMBIT, you can ditch the others
 #                    with the cmake flag -Ditch="Collider;Decay;Spec;Flav"
 #           *) if you want to force GAMBIT to configure with python2 and
@@ -65,7 +65,7 @@
 #              x If you have more than one classy version installed, GAMBIT will throw an error during the
 #                 dependency resolution. This is the case as the different CLASS versions can all satisfy
 #                 the same capabilities. To fix this, either set a rule for each CLASS-related capability which
-#                 version GAMBIT should use (see comments in section C.7)) or (easier) uninstall all classy versions you don't want to use (see below). 
+#                 version GAMBIT should use (see comments in section C.7)) or (easier) uninstall all classy versions you don't want to use (see below).
 #
 #
 #    => To clean/nuke a backend just do
@@ -122,7 +122,7 @@ Parameters:
     T_cmb: 2.72548
 
 
-  # .. LCDM_theta with 100theta_s instead of H0 
+  # .. LCDM_theta with 100theta_s instead of H0
   # as model parameter
   # LCDM_theta:
   #   omega_b:
@@ -142,8 +142,8 @@ Parameters:
 
   # ====== B.2) Primordial power spectra & inflationary models =======
 
-  # For a primordial power spectrum that is described by a 
-  # power-law choose the model PowerLaw_ps and set the relevant 
+  # For a primordial power spectrum that is described by a
+  # power-law choose the model PowerLaw_ps and set the relevant
   # parameters and priors
   PowerLaw_ps:
     ln10A_s:
@@ -157,7 +157,7 @@ Parameters:
 
   # If you wish to include a concrete inflationary model instead, comment the lines above and
   # include, e.g. Inflation_InstReh_1linear
-  # For a full list of all implemented inflation models and their parameters refer to Appendix B.2 
+  # For a full list of all implemented inflation models and their parameters refer to Appendix B.2
   # of the CosmoBit module paper
   #Inflation_InstReh_1linear:
   #  lambda:
@@ -182,21 +182,21 @@ Parameters:
   # ====== B.4) Non-standard radiation content (optional) =======
 
   # If you would like to study extensions of LCDM including non-standard radiation
-  # content, you can add the most general model 'etaBBN_rBBN_rCMB_dNurBBN_dNurCMB' 
+  # content, you can add the most general model 'etaBBN_rBBN_rCMB_dNurBBN_dNurCMB'
   # and its parameters, or any child model thereof. See Appendix B.4 of the CosmoBit
-  # module paper for a detailed description. 
+  # module paper for a detailed description.
 
   # example 1: extension of standard LCDM allowing for an increased value of dNeff
-  # during the epoch of recombination and today. If you want dNeff to be allowed to 
-  # take negative values (knowing this can lead to an unphysical negative contribution to 
+  # during the epoch of recombination and today. If you want dNeff to be allowed to
+  # take negative values (knowing this can lead to an unphysical negative contribution to
   # Omega_r0, the energy density in radiation today) you can do this by
   # including an additional rule. It's explained below, search for #negative-dNeff
   dNurCMB:
-   dNur_CMB: 
+   dNur_CMB:
      prior_type: flat
      range: [0.0,1.0]
 
-  # example 2: Most general model for non-standard radiation content and its parameters. 
+  # example 2: Most general model for non-standard radiation content and its parameters.
   #etaBBN_rBBN_rCMB_dNurBBN_dNurCMB:
   #  eta_BBN:  # baryon-to-photon ratio during BBN
   #    prior_type: flat
@@ -269,7 +269,7 @@ Parameters:
 
   # Include this if you use the Pantheon SNe likelihood into your scan
   # Note: - for all official MontePython likelihoods that require nuisance parameters, a model
-  #   called 'cosmo_nuisance_<likelihood_name>' is implemented. Run ./gambit cosmo_nuisance_<likelihood_name> 
+  #   called 'cosmo_nuisance_<likelihood_name>' is implemented. Run ./gambit cosmo_nuisance_<likelihood_name>
   #   to check the names of the parameters in GAMBIT and set the ranges and priors here.
   #   - if you include a nuisance model that is not required by any likelihood, GAMBIT will
   #   exit and tell you the name of the parameter that is not needed. Likewise, if you forget
@@ -381,7 +381,7 @@ ObsLikes:
     # Note that the path has to be relative to your GAMBIT directory.
     # If you set it so "default" the default MontePython file 'likelihoods/<likelihood_name>/<likelihood_name>.data'
     # will be used
-    sub_capabilities: 
+    sub_capabilities:
       bao_smallz_2014: default # to use default .data file with settings for likelihood calculation ..
       #bao_smallz_2014: CosmoBit/data/BAO/bao_galactic_settings.data # .. or use custom .data file
       Pantheon: default
@@ -399,7 +399,7 @@ ObsLikes:
 
 
   # Print out the Hubble parameter today
-  # (you can add any other capability that returns a 
+  # (you can add any other capability that returns a
   # double, int, vector, or string to double/int map here)
   - purpose:      Observable
     capability:   H0
@@ -407,8 +407,8 @@ ObsLikes:
 
 Rules:
 #======== Rule entries ========
-# Specify all additional rules and settings for the scan. 
-# For details of all backend interfaces and related settings, see Appendix C 
+# Specify all additional rules and settings for the scan.
+# For details of all backend interfaces and related settings, see Appendix C
 # of the CosmoBit module paper.
 
 
@@ -457,9 +457,9 @@ Rules:
   # ---- C.2) CLASS related settings -----
 
   # Specify any CLASS input parameters (except model parameters) that usually go into the .ini file here
-  # Note: - all ouput-related parameters for any included likelihood (which spectra need to be computed, 
+  # Note: - all ouput-related parameters for any included likelihood (which spectra need to be computed,
   #     mPk up to which redshifts, precision parameters,..) are passed automatically to CLASS. So in principle,
-  #     there is no need to pass anything here. 
+  #     there is no need to pass anything here.
   #     - do NOT pass any parameters here that are supposed to be scanned over. GAMBIT will exit
   #     with a fatal error if you are trying to overwrite a model parameter.
   - capability: classy_input_params
@@ -473,7 +473,7 @@ Rules:
 
   # ---- C.3) DarkAges related settings -----
 
-  # Options recognised by DarkAges. The user can choose if the energy injection efficiency 
+  # Options recognised by DarkAges. The user can choose if the energy injection efficiency
   # functions f_eff are calculated via the transfer functions or the factorised approach.
   # See chapter 5.4 and Appendix C.3 of the module paper for details on the two approaches.
   # The options below are set to their default values
@@ -488,7 +488,7 @@ Rules:
 
   # You need to choose whether to have the possibility to set up the class parameters with arguments from MontePython Likelihoods.
   # GAMBIT will tell you if you get this wrong; if it doesn't complain it is fine.
-  # Option a): If MontePython is installed, use this option. Everything will be taken care of 
+  # Option a): If MontePython is installed, use this option. Everything will be taken care of
   #       automatically (even if no MontePython likelihoods are in use)
   # Option b): MontePython is not installed
   - capability: classy_MPLike_input
@@ -498,11 +498,11 @@ Rules:
 
   # This rule is only strictly needed when
   # Option a): more than one MP likelihoods with nuisance parameters are in use
-  # Option b): if no MP settings shall be passed to CLASS, i.e. if no MP likelihood 
-  #     is in use. In practice, you should never have to set this. GAMBIT will take 
-  #     care of this automatically. 
-  # => It's best to play safe and never include this rule, unless GAMBIT specifically 
-  # asks you to do so.  
+  # Option b): if no MP settings shall be passed to CLASS, i.e. if no MP likelihood
+  #     is in use. In practice, you should never have to set this. GAMBIT will take
+  #     care of this automatically.
+  # => It's best to play safe and never include this rule, unless GAMBIT specifically
+  # asks you to do so.
   #- capability: parameter_dict_for_MPLike
   #  function: set_parameter_dict_for_MPLike          # uncomment for option a)
   #  function: pass_empty_parameter_dict_for_MPLike   # uncomment for option b)
@@ -532,7 +532,7 @@ Rules:
 
   # ---- C.6) plc related settings -----
 
-  # If you use any of the Planck likelihoods and you do not want to download the 
+  # If you use any of the Planck likelihoods and you do not want to download the
   # Planck data through gambit (type 'make plc_data' in the build directory)
   # then you can set the path to the directory where you have downloaded the data
 
@@ -546,7 +546,7 @@ Rules:
   # ---- C.7) Finally "Global" (CossmoBit-wide) settings ----
 
   # By default, CosmoBit does not allow negative values for dNur_BBN and dNur_CMB as this can
-  # lead to unphysical inputs in cases where dN_ur < 0 and abs(dN_ur) > N_ur contribution from 
+  # lead to unphysical inputs in cases where dN_ur < 0 and abs(dN_ur) > N_ur contribution from
   # 3 SM neutrinos today. If you want to circumvent this limitation, uncomment the following lines
   # (#negative-dNeff)
   #- module: CosmoBit
@@ -554,8 +554,8 @@ Rules:
   #    allow_negative_delta_N_ur: true
 
   # The rules below are only needed when you have multiple classy version installed at the same
-  # time. The easiest way to choose one is just to run 'make nuke-classy_<version>' for 
-  # all versions but the one you would like to use. 
+  # time. The easiest way to choose one is just to run 'make nuke-classy_<version>' for
+  # all versions but the one you would like to use.
   # If you want to keep all of them installed, fix the version you want to use with the
   # rules below
   #- capability: MP_LogLikes
