--- a/yaml_files/include/StandardModel_mNudiff_NH_scan.yaml
+++ b/yaml_files/include/StandardModel_mNudiff_NH_scan.yaml
@@ -56,17 +56,16 @@ alpha2  :  0       # second CP-violating Majorana phase
 
 # mass of lightest neutrino in eV
 mNu_light:
-  #prior_type: flat
-  #range: [0.,2.]
-  prior_type: log
-  range: [1e-5,1e1]
-  #range: [1e-7,1e1]
+  prior_type: flat
+  range: [0.,1.1]
+  #prior_type: double_log_flat_join
+  #ranges: [ 0., 0., 3.e-4, 1.1]
 
 # mass spliting dmNu21 in eV^2
 dmNu21:
   prior_type: flat
   scale : 1e-5
-  range: [5.,10.]
+  range: [6.,9.]
 
 # mass spliting dmNu3l in eV^2
 # (NH) dmNu3l = dmNu31 > 0.0
@@ -74,4 +73,4 @@ dmNu21:
 dmNu3l:
   prior_type: flat
   scale : 1e-3
-  range: [2.,3.]
+  range: [2.2,2.8]
