Stopped standalone build in CI using multiple procs (not enough mem) 	modified:   .github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
     - name: Build standalones
       run: |
         cd BUILD && . buildenv.sh
-        make -j$(nproc) standalones
+        make standalones
     # - name: Validation dependencies
     #   run: |
     #     . BUILD/buildenv.sh
