--- a/yaml_files/CMSSM_DS6_test.yaml
+++ b/yaml_files/CMSSM_DS6_test.yaml
@@ -341,6 +341,8 @@ Rules:
     function: RD_oh2_DS_general
     #function: RD_oh2_DarkSUSY
     #function: RD_oh2_MicrOmegas
+    backends:
+      - {backend: DarkSUSY_MSSM, version: 6.2.2}
     options:
       # for all calculations
       fast: 1
@@ -348,18 +350,25 @@ Rules:
       omtype: 1
       # used by RD_oh2_MicrOmegas only
       Beps: 1e-5
+
+  - capability: sigmav
+    function: sigmav_late_universe
+
   - capability: RD_eff_annrate_DSprep_MSSM
     function: RD_annrate_DS6prep_MSSM_func
 
   - capability: RD_eff_annrate
-    function: RD_eff_annrate_DS
+    function: RD_eff_annrate_DS_MSSM
+    backends:
+      - {backend: DarkSUSY_MSSM, version: 6.2.2}
 
   - capability : RD_spectrum
     function: RD_spectrum_MSSM
 
   - capability: TH_ProcessCatalog
-    function: TH_ProcessCatalog_DS6_MSSM
-    module: DarkBit
+    function: TH_ProcessCatalog_DS_MSSM
+    backends:
+      - {backend: DarkSUSY_MSSM, version: 6.2.2}
 
   # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamlike
   - capability: lnL_FermiLATdwarfs
@@ -367,14 +376,18 @@ Rules:
 
   # Choose to use DarkSUSY yield tables for indirect detection
   - capability: SimYieldTable
-    function: SimYieldTable_DarkSUSY6
+    function: SimYieldTable_DarkSUSY
+    backends:
+      - {backend: DarkSUSY_MSSM, version: 6.2.2}
     options:
       allow_yield_extrapolation: true
 
   # Use DarkSUSY or MicrOmegas for calculating direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_MSSM_DS6
-    #function: DD_couplings_MicrOmegas
+    function: DD_couplings_DarkSUSY_MSSM
+#    #function: DD_couplings_MicrOmegas
+    backends:
+      - {backend: DarkSUSY_MSSM, version: 6.2.2}
 
   # Choose to get decays from DecayBit proper, not from an SLHA file.
   - capability: decay_rates
