--- a/yaml_files/MajoranaSingletDM_Z2.yaml
+++ b/yaml_files/MajoranaSingletDM_Z2.yaml
@@ -133,32 +133,12 @@ ObsLikes:
 ##############################################################################################
 Rules:
 
-  # Use DDCalc 2.0.0
-  - capability: LUX.*
-    backends:
-    - {backend: DDCalc, version: 2.0.0}
-  - capability: XENON1T.*
-    backends:
-    - {backend: DDCalc, version: 2.0.0}
-  - capability: PandaX.*
-    backends:
-    - {backend: DDCalc, version: 2.0.0}
-  - capability: PICO.*
-    backends:
-    - {backend: DDCalc, version: 2.0.0}
-  - capability: CRESST.*
-    backends:
-    - {backend: DDCalc, version: 2.0.0}
-  - capability: CDMS.*
-    backends:
-    - {backend: DDCalc, version: 2.0.0}
-  - capability: DarkSide.*
-    backends:
-    - {backend: DDCalc, version: 2.0.0}
-
-  # Use the DarkBit native calculator for the relic density
+  # Use DarkBit native calculator (based on the DarkSUSY Boltzmann solver) for relic density
   - capability: RD_oh2
-    function: RD_oh2_general
+    #function: RD_oh2_DS5_general
+    function: RD_oh2_DS_general
+    options:
+      fast: 1  # 0: standard, 1: fast (default when co-annihilations etc are involved)
 
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
@@ -191,12 +171,22 @@ Rules:
   - capability: capture_rate_Sun
     function: capture_rate_Sun_vnqn
 
+
+  # Use micromega's calculations of the direct detection couplings
+  - capability: DD_couplings
+    function: DD_couplings_MicrOmegas
+
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
     function: RD_fraction_leq_one
 
-  # Choose to use DarkSUSY's yield tables for indirect detection
+  # Choose between the functions sigmav_late_universe and sigmav_late_universe_MicrOmegas
+  - capability: sigmav
+    function: sigmav_late_universe
+
+  # Choose to use DarkSUSY yield tables for indirect detection
   - capability: SimYieldTable
+    #function: SimYieldTable_DS5
     function: SimYieldTable_DarkSUSY
     options:
       allow_yield_extrapolation: true
@@ -214,7 +204,8 @@ Rules:
 ##############################################################################################
 Printer:
 
-  printer: hdf5
+  printer: cout
+  #printer: hdf5
 
   options:
     output_file: "MajoranaSingletDM_Z2.hdf5"
