--- a/yaml_files/MajoranaSingletDM_Z2.yaml
+++ b/yaml_files/MajoranaSingletDM_Z2.yaml
@@ -204,8 +204,8 @@ Rules:
 ##############################################################################################
 Printer:
 
-  printer: cout
-  #printer: hdf5
+  #printer: cout
+  printer: hdf5
 
   options:
     output_file: "MajoranaSingletDM_Z2.hdf5"
