--- a/yaml_files/NUHM2.yaml
+++ b/yaml_files/NUHM2.yaml
@@ -74,8 +74,8 @@ Priors:
 
 Printer:
 
-#  printer: hdf5
-  printer: ascii
+  printer: hdf5
+  #printer: ascii
 
   options:
     output_file: "NUHM2.hdf5"
