--- a/yaml_files/VectorSingletDM_Z2.yaml
+++ b/yaml_files/VectorSingletDM_Z2.yaml
@@ -205,8 +205,8 @@ Rules:
 ##############################################################################################
 Printer:
 
-  printer: hdf5
-  #printer: cout
+  #printer: hdf5
+  printer: cout
 
   options:
     output_file: "VectorSingletDM_Z2.hdf5"
