--- a/yaml_files/MSSM7.yaml
+++ b/yaml_files/MSSM7.yaml
@@ -80,8 +80,8 @@ Priors:
 
 Printer:
 
-  printer: hdf5
-#  printer: ascii
+#  printer: hdf5
+  printer: ascii
 
   options:
     output_file: "MSSM7.hdf5"
