--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Backends/installed/gledeli"]
-	path = Backends/installed/gledeli
+	path = Backends/installed/gledeli/1.0
 	url = git@github.com:anderkve/gledeli.git
