--- a/yaml_files/NuclearBit_demo.yaml
+++ b/yaml_files/NuclearBit_demo.yaml
@@ -95,8 +95,8 @@ Printer:
 
 Scanner:
 
-  # use_scanner: de
-  use_scanner: random
+  use_scanner: de
+  # use_scanner: random
   # use_scanner: multinest
 
   scanners:
@@ -125,15 +125,15 @@ ObsLikes:
 
   # We must include the Oslo Method loglike in total loglike for the scan
   - purpose:      LogLike
-    capability:   OMLogLike
-    module:       OMBit         # Not really needed, GAMBIT can figure it out
-    function:     getOMLogLike  # Not really needed, GAMBIT can figure it out
+    capability:   gledeliLogLike
+    #module:       NuclearBit # Not really needed, GAMBIT can figure it out
+    #function:     getGledeliLogLike  # Not really needed, GAMBIT can figure it out
 
   # We want to save all the different numbers we get from the fompy backend
   - purpose:      Observable
-    capability:   GLEDELiResults
-    module:       OMBit            # Not really needed, GAMBIT can figure it out
-    function:     getGLEDELiResults  # Not really needed, GAMBIT can figure it out
+    capability:   gledeliResults
+    #module:       NuclearBit            # Not really needed, GAMBIT can figure it out
+    #function:     getGledeliResults  # Not really needed, GAMBIT can figure it out
 
 
 Rules:
@@ -145,13 +145,13 @@ Logger:
 
   redirection:
     [Default]  : "default.log"
-    [OMBit]    : "OMBit.log"
+    [NuclearBit]    : "NuclearBit.log"
     [Scanner]  : "Scanner.log"
 
 
 KeyValues:
 
-  debug: false  # Set to true for very verbose log files
+  debug: True  # Set to true for very verbose log files
 
   default_output_path: "runs/NuclearBit_demo"
 
